Removed minimum vh to prevent calc from stretching vertically

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,6 @@ main {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto 1fr;
     padding: 20px;
-    min-height: 100vh;
 }
 
 .appTitle {
